<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:icon="@drawable/ic_baseline_color_lens_24"
        app:title="@string/messages_header">

        <SwitchPreferenceCompat
            app:key="dark_theme"
            app:title="@string/dark_theme_title" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/displaying_header"
        android:icon="@drawable/ic_baseline_display_settings_24">

        <ListPreference
            app:defaultValue="List"
            app:entries="@array/displaying_entries"
            app:entryValues="@array/displaying_values"
            app:key="list_format"
            app:title="@string/list_format_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/app_header">

        <Preference app:title="@string/about_app_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/data_intent" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>